c2/HandlePtell
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:556:20: error: use of undeclared identifier 'off_41CE28'
if ( !strncmp( v1, off_41CE28, 3uLL) ) 
                   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:570:21: error: use of undeclared identifier 'off_41CE28'
if ( !strncmp( v1, &off_41CE28[4], 4uLL) || !strncmp( v1, "time", 4uLL) ) 
                    ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:587:22: error: use of undeclared identifier 'unk_41D267'
v2 = ( const char *)&unk_41D267; 
                     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:593:22: error: use of undeclared identifier 'unk_41D28F'
v2 = ( const char *)&unk_41D28F; 
                     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:603:12: error: expected expression
*( _OWORD *)hand_value = *( _OWORD *)std_hand_value; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:603:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)hand_value = *( _OWORD *)std_hand_value; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:604:12: error: expected expression
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:604:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:604:41: error: expected expression
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:604:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
                                ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:605:12: error: expected expression
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:605:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:605:41: error: expected expression
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/partner.c:605:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
                                ^
14 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/HandlePtell/src/obj/partner.o] Error 1
